# ginger

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.adoc  README.md  appveyor.yml  index.html
docs/: Makefile  getting-started.adoc  index.adoc  unit.adoc  vector.adoc
docs/src/: getting-started.adoc  index.adoc  unit.adoc
examples/: CMakeLists.txt
examples/unit/: CMakeLists.txt  main.c  vector.c
examples/vector/: CMakeLists.txt  alloc.c  copy.c  dup.c  reserve.c  shrink.c  stack.c
include/ginger/: unit.h  vec.h  vector.h
src/: CMakeLists.txt  vec.c  vector.c
test/: CMakeLists.txt
test/unit/: LICENSE  unit.h
test/unittests/: CMakeLists.txt  canary.c  main.c  vec.c  vector.c
