add_subdirectory(unittests)
add_executable(${PROJECT_NAME}_unittest ${${PROJECT_NAME}_UNITTEST_SOURCES})
target_link_libraries(${PROJECT_NAME}_unittest ${PROJECT_NAME}_static)
if (UNIX)
  target_link_libraries(${PROJECT_NAME}_unittest m)
endif()

foreach(UNITTEST_SOURCE ${${PROJECT_NAME}_UNITTEST_SOURCES})
  file(STRINGS ${UNITTEST_SOURCE} TEST_NAMES REGEX ^BEGIN_SUITE)
  foreach(TEST_NAME ${TEST_NAMES})
    string(REGEX REPLACE ["\) \(,"] ";" TEST_NAME ${TEST_NAME})
    list(GET TEST_NAME 1 TEST_SUITE_NAME)
    add_test(${PROJECT_NAME}.${TEST_SUITE_NAME} ${PROJECT_NAME}_unittest ${TEST_SUITE_NAME})
  endforeach()
endforeach()
